Fix navbar dropdown gap to prevent hover loss

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -116,19 +116,9 @@
   height: 100%;
 }
 
-/* Ensure hit area for hover */
-.nav-dropdown::after {
-  content: '';
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  height: 20px; /* Bridge gap between nav item and dropdown */
-}
-
 .dropdown-menu {
   position: absolute;
-  top: calc(100% + 15px);
+  top: 100%;
   left: 0;
   background-color: #111;
   min-width: 200px;
@@ -159,7 +149,7 @@
 
 .mega-menu {
   position: absolute;
-  top: calc(100% + 15px);
+  top: 100%;
   left: 0;
   width: 100%; /* Span full width of header */
   background-color: #111;
